syntax = "proto3";

package com.hs.dsch.proto;

// 消息响应码
enum DSchResponseCode {
	// 预留
    RESP_CODE_RESERVED = 0;
	// 成功
    RESP_CODE_SUCCESS = 200;
    // 失败
    RESP_CODE_FAILED = 201;
};

// 任务执行策略定义
message DSchJobExecStrategy {
	// cron表达式
	string cron = 1;
	// 任务执行固定延迟，XX毫秒
	int64 fixedDelay = 2;
	// 任务固定频率调度，XX毫秒
	int64 fixedRate = 3;
	// 第一次调度前延迟，XX毫秒
	int64 initialDelay = 4;
}

//【任务端】节点注册消息请求
message DSchRegisterNodeRequest {
	// 服务名
	string serviceName = 1;
	// 服务描述
	string desc = 2;
	// 节点IP地址
	string host = 3;
}

//【任务端】节点注册消息响应
message DSchRegisterNodeResponse {
	// 结果码
	DSchResponseCode resCode = 1;
	// 服务端分配节点id
	string nodeId = 2;
}

//【任务端】任务注册请求
message DSchRegisterJobRequest {
	// 节点id
	string nodeId = 1;
	// 任务名字
	string jobName = 2;
	// 任务调度策略
	DSchJobExecStrategy strategy = 3;
}

//【任务端】任务注册响应
message DSchRegisterJobResponse {
	// 结果码
	DSchResponseCode resCode = 1;
	// 节点id
	string nodeId = 2;
	// 任务id
	string jobId = 3;
}

// 任务定义
message DSchJob {
	// 任务id
	string jobId = 1;
	// 任务最近一次开始执行时间
	int64 beginTime = 2;
	// 任务最近一次结束执行时间
	int64 endTime = 3;
}

// 节点定义
message DSchNode {
	// 节点id
	string nodeId = 1;
	// 节点进程中活跃线程数
	int64 activeThreads = 2;
	// 节点进程CPU使用率
	int64 cpu = 3;
	// 节点进程内存使用率
	int64 mem = 4;
	// 最后更新时间
	int64 updateTime = 5;
}

//【任务端】任务健康检查请求
message DSchJobHealthCheckRequest {
	// 节点id
	string nodeId = 1;
	// 任务描述
	DSchJob job = 2;
}

//【任务端】任务健康检查响应
message DSchJobHealthCheckResponse {
	// 响应码
	DSchResponseCode resCode = 1;
}

//【任务端】节点健康检查请求
message DSchNodeHealthCheckRequest {
	// 节点id
	string nodeId = 1;
	// 节点描述
	DSchNode node = 2;
}

//【任务端】节点健康检查响应
message DSchNodeHealthCheckResponse {
	// 响应码
	DSchResponseCode resCode = 1;
}

// 命令定义
enum DSchCmd {
	//【管理端】任务恢复
    DSCH_JOB_RESUME = 0;
    //【管理端】任务暂停
    DSCH_JOB_PAUSE = 1;
    //【任务端】节点下线
    DSCH_NODE_OFFLINE = 2;
    //【任务端】服务上线
    DSCH_SERVICE_ONLINE = 3;
    //【任务端】服务下线
    DSCH_SERVICE_OFFLINE = 4;
};

//【任务端】获取远程控制命令请求
message DSchCommandRequest {
	// 节点id
	string nodeId = 1;
	// 任务id
	string jobId = 2;
}

// 远程控制命令列表
message DSchCommand {
	// 任务id
	string jobId = 1;
	// 远程控制命令
	DSchCmd cmdType = 2;
}

//【任务端】获取远程控制命令响应
message DSchCommandResponse {
	// 获取远程控制命令
	DSchCommand command = 1;
	// 节点id
	string nodeId = 2;
}

//【管理端】添加命令请求
message DSchAddCommandRequest {
	// 远程控制命令列表
	string nodeId = 1;
	repeated DSchCommand cmds = 2;
}

//【管理端】添加命令响应
message DSchAddCommandResponse {
	// 结果码
	DSchResponseCode resCode = 1;
}

//【管理端/任务端】任务运行状态
enum DSchJobStatus {
	// 任务已经启动
	DSCH_JOB_ST_STARTED = 0;
	// 任务运行中
	DSCH_JOB_ST_RUNNING = 1;
	// 任务已启动未运行
	DSCH_JOB_ST_IDLING = 2;
	// 任务已经停止
	DSCH_JOB_ST_STOPPED = 3;
}

//【管理端】获取任务状态请求
message DSchJobStatusRequest {
	// 节点id
	string nodeId = 1;
	// 任务id
	string jobId = 2;
}

//【管理端】获取任务状态响应
message DSchJobStatusResponse {
	// 结果码
	DSchResponseCode resCode = 1;
	// 任务详情
	DSchJob job = 2;
}

//【管理端】获取节点状态请求
message DSchNodeStatusRequest {
	// 节点id
	string nodeId = 1;
}

//【管理端】获取节点状态响应
message DSchNodeStatusResponse {
	// 结果码
	DSchResponseCode resCode = 1;
	// 任务详情
	DSchNode node = 2;
}

//【管理端】节点下线请求
message DSchOfflineNodeRequest {
	// 节点id
	string nodeId = 1;
}

//【管理端】节点下线响应
message DSchOfflineNodeResponse {
	// 结果码
	DSchResponseCode resCode = 1;
}

//【管理端】服务上线请求
message DSchOnlineServiceRequest {
	// 服务名
	string serviceName = 1;
}

//【管理端】服务上线响应
message DSchOnlineServiceResponse {
	// 结果码
	DSchResponseCode resCode = 1;
}

//【管理端】服务下线请求
message DSchOfflineServiceRequest {
	// 服务名
	string serviceName = 1;
}

//【管理端】服务下线响应
message DSchOfflineServiceResponse {
	// 结果码
	DSchResponseCode resCode = 1;
}

//【管理端】任务清理请求
message DSchJobCleanRequest {
	// 任务id
	string jobId = 1;
}

//【管理端】任务清理响应
message DSchJobCleanResponse {
	// 结果码
	DSchResponseCode resCode = 1;
}

//【管理端】节点清理请求
message DSchNodeCleanRequest {
	// 任务id
	string nodeId = 1;
}

//【管理端】节点清理响应
message DSchNodeCleanResponse {
	// 结果码
	DSchResponseCode resCode = 1;
}